# overleaf-cli

./: .gitignore  AGENT.md  CHANGELOG.md  README.md  pyproject.toml
skill/: SKILL.md
src/overleaf_cli/: __init__.py  __main__.py  auth.py  cli.py  client.py  config.py  ignore.py  manifest.py  project.py  skill_content.py  socketio.py  sync.py
tests/: test_cli.py  test_config.py  test_ignore.py  test_init_create.py  test_manifest.py
